<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.myorderyeski.MainPage">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/coverdepan"/>

    <ImageButton
        android:id="@+id/belisekarang"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:src="@drawable/iconbelisekarang"
        android:background="@null"
        android:layout_marginBottom="207dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>

    <!--
        * Designed by Alfian F
    -->
