<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/sampulpolos" >

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_below="@+id/btn"
        android:layout_above="@+id/btnkonfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    <ScrollView
        android:id="@+id/verticalScrollView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <TableLayout
            android:id="@+id/tableMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableLayout>
    </ScrollView>
    </HorizontalScrollView>

    <ImageButton
        android:id="@+id/btnkonfirm"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:src="@drawable/iconkonfirmasi"
        android:background="@null"
        android:layout_marginBottom="11dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="40dp" />

    <ImageButton
        android:id="@+id/btnNol"
        android:layout_width="115dp"
        android:layout_height="70dp"
        android:src="@drawable/iconreset"
        android:background="@null"
        android:layout_below="@+id/horizontalScrollView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp" />
</RelativeLayout>

    <!--
        * Designed by Alfian F
    -->